--- a/view/index.html
+++ b/view/index.html
@@ -16,8 +16,37 @@
     </head>
     <body>
         <div id="app">
-
-            <h1>login here</h1>
+            <section id="login">
+                <div class="container">
+                    <div class="row logcontainer">
+                        <div class="col-sm-0 col-lg-3"></div>
+                        <div class="col-lg-6">
+                            <div class="card">
+                                <div class="card-header text-center">
+                                    LOG-IN
+                                </div>
+                                <div class="card-body">
+                                    <form>
+                                        <div class="mb-3">
+                                            <label for="exampleInputEmail1" class="form-label">Email Address</label>
+                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Type your email address">
+                                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Type your password">
+                                        </div>
+                                        <div class="row">
+                                            <a class="col-4 btn btn-dark logbtn" href="#">Login</a>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-0 col-lg-3"></div>
+                    </div>
+                </div>
+            </section>
 
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
