--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Pets Adoption</title>
         <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -29,15 +29,15 @@
                                     <form>
                                         <div class="mb-3">
                                             <label for="exampleInputEmail1" class="form-label">Email Address</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Type your email address">
+                                            <input v-model="userinput" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Type your email address">
                                             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                                         </div>
                                         <div class="mb-3">
                                             <label for="exampleInputPassword1" class="form-label">Password</label>
-                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Type your password">
+                                            <input v-model="passinput" type="password" class="form-control" id="exampleInputPassword1" placeholder="Type your password">
                                         </div>
                                         <div class="row">
-                                            <a class="col-4 btn btn-dark logbtn" href="#">Login</a>
+                                            <a class="col-4 btn btn-dark logbtn" :href="href"  @click="login">Login</a>
                                         </div>
                                     </form>
                                 </div>
@@ -52,6 +52,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
     <script src="../js/vue.js"></script>
-    <script src="..js/sweetalert2.all.min.js"></script>
+    <script src="../js/sweetalert2.all.min.js"></script>
     <script src="../js/main.js"></script>
 </html>
