--- a/view/app.html
+++ b/view/app.html
@@ -48,8 +48,8 @@
                     <div class="modal-body">
                         <form>
                             <div class="form-group">
-                              <label for="exampleInputEmail1">Email address</label>
-                              <input type="text"class="col-md-12"class="form control"placeholder="ingrese nombre" v-model="">
+                              <label for="exampleInputEmail1">Nombre</label>
+                              <input type="text"class="col-md-12"class="form control"placeholder="ingrese nombre" v-model="name">
                             </div>
              
                           </form>                    
