--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,10 @@ body{
 }
 
 #login .card{
-    background: rgba(255,255,255,0.15);
+    background: rgba(0,0,0,0.15);
     backdrop-filter: blur(5px);
     box-shadow: 0 25px 45px rgba(0,0,0,0.6);
-    border: 1 solid rgba(255,255,255,0.5);
+    border: 1px solid rgba(255,255,255,0.5);
 }
 
 
