--- a/view/app.html
+++ b/view/app.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
-        <div id="app">
+        <div id="app" v-if="newArrUsers[pos].token === true">
             <header>
                 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="container">
