background image was replaced

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url("../images/pets.jpg");
+    background-image: url("../images/pets1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
