--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,69 @@ body{
 .form {
     width: 450px;
 }
+.modal-adopt{
+    background-color: aliceblue;
+}
+.modal-Menu{
+background-color: #fff;
+align-items: center;
+display: flex;
+padding: 80px;
+border:aqua;
+justify-content: center;
+margin-top: 80px;
+
+}
+
+.card{
+
+    
+    background-color: #191919;
+   
+    margin-left: 200px;
+    margin-top: 100px;
+    font-size: 20px;
+    color: #fff;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border: none;
+}
+ .card:hover{
+    border: 2px solid #fff;
+    box-shadow: 0 0 20px #fff;
+}
+
+ .card img{
+    border-radius: 10px;
+}
+
+.modal-body h4{
+    font-weight: bold;
+}
+
+#carrito tbody img{
+    width: 40px;
+    height: 40px;
+}
+#footer {
+    background: linear-gradient(90deg, #0b0b0b, #1b1c1d 25%, #232526);
+    margin-top: 150px;
+}
+
+#footer a, h6 {
+    text-decoration: none;
+    color: white;
+}
+
+#footer h6 i{
+    font-size: 20px;
+}
+
+#footer a{
+    color: white;
+}
+
+#footer a:hover{
+    color: white;
+}
