--- a/view/index.html
+++ b/view/index.html
@@ -21,7 +21,7 @@
                     <div class="row logcontainer">
                         <div class="col-sm-0 col-lg-3"></div>
                         <div class="col-lg-6">
-                            <div class="card">
+                            <div class="card-login">
                                 <div class="card-header text-center">
                                     LOG-IN
                                 </div>
@@ -34,7 +34,7 @@
                                         </div>
                                         <div class="mb-3">
                                             <label for="exampleInputPassword1" class="form-label">Password</label>
-                                            <input v-model="passinput" @keyup.enter="login" type="password" class="form-control" id="exampleInputPassword1" placeholder="Type your password">
+                                            <input v-model="passinput" type="password" class="form-control" id="exampleInputPassword1" placeholder="Type your password">
                                         </div>
                                         <div class="row">
                                             <a class="col-4 btn btn-dark logbtn" :href="href"  @click="login">Login</a>
