--- a/css/styles.css
+++ b/css/styles.css
@@ -70,10 +70,7 @@ margin-top: 80px;
 }
 
 .card{
-
-    
     background-color: #191919;
-   
     margin-left: 200px;
     margin-top: 100px;
     font-size: 20px;
@@ -99,6 +96,11 @@ margin-top: 80px;
 #carrito tbody img{
     width: 40px;
     height: 40px;
+}
+
+.menu-title{
+text-align: center;
+
 }
 #footer {
     background: linear-gradient(90deg, #0b0b0b, #1b1c1d 25%, #232526);
