--- a/view/app.html
+++ b/view/app.html
@@ -69,13 +69,54 @@
                     </div>
                 </div>     
             </div>
-        </section>    
+        </section> 
+        //
+        <section id="tableAdmin" v-if="newArrUsers[pos].token === true && newArrUsers[pos].status === admin">
+            <div class="container">
+                <div class="table-responsive">
+                    <table class="table table-dark table-hover">
+                        <thead class="text-center">
+                            <tr>
+                                <th>NOMBRE</th>
+                                <th>FECHA</th>
+                                <th>QUIÉN ADOPTO</th>
+                                <th>OPCIONES</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-center">
+                            <tr v-for="(objeto,index) in arrayTabPet" :key="`objeto-${index}`">
+                                <td v-text="objeto.element"></td>
+                                <td v-text="objeto.element"></td>
+                                <td v-text="objeto.element"></td> 
+                                <td>
+                                    <button
+                                        type="button"
+                                        class="btn btn-danger btn-sm"
+                                        data-tooltip
+                                        title="Eliminar"
+                                        @click="deleteArrayTabPet(index)"
+                                        >
+                                        <i class="fa-solid fa-trash-can"></i><i class="icon-trash"></i>
+                                    </button>
+                                    <!-- @click="deleteArrayTabPet(index)" -->
+                                </td> 
+                            </tr>
+                        </tbody>
+                        <tbody v-else>
+                            <td colspan="5" class="text-center">
+                                NO EXISTEN DATOS
+                            </td>
+                        </tbody>
+                    </table>
+                </div>
+            </div>                
+        </section>   
         <!-- Modal dar en adopción-->
         <div class="modal fade" id="modalAdopcion" tabindex="-1" aria-labelledby="modalAdopcion" aria-hidden="true">
             <div class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Datos de la mascota</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">DATOS DE LA MASCOTA</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
